# jupyterlab-git-oauth

./: .gitignore  AGENTS.md  LICENSE  README.md  SUMMARY.md  TODO.md  hatch_build.py  install.json  jest.config.js  package.json  pyproject.toml
.github/workflows/: ci.yml  publish-test.yml  publish.yml  upstream-check.yml
jupyter-config/: jupyter_server_oauth_providers.json
jupyter_server_oauth_providers/: __init__.py  app.py  audit.py  auth_broker.py  credential_helper.py  handlers.py  identity_sync.py  token_store.py
jupyter_server_oauth_providers/providers/: __init__.py  base.py  github.py  gitlab.py  registry.py
jupyterlab_git/: __init__.py  git.py  handlers.py
src/: deviceflow.tsx  gitlab-auth.ts  index.ts  version.ts
src/__tests__/: gitlab-auth.spec.ts
src/components/: FileList.tsx  GitPanel.tsx
tests/: conftest.py  test_api.py  test_credential_helper.py  test_git_author.py  test_gitlab_auth.py  test_providers.py  test_token_store.py
testutils/: jest-setup-files.js
