[build-system]
requires = [
  "hatchling>=1.5.0",
  "hatch-nodejs-version>=0.3.2",
  "hatch-jupyter-builder>=0.8.3",
  "jupyterlab>=4.0.0,<5",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-git-oauth"
dynamic = ["version", "description", "authors", "keywords"]
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
]
dependencies = [
  "jupyter_server>=2.0.1,<3",
  "nbdime~=4.0.1",
  "nbformat",
  "packaging",
  "pexpect",
  "traitlets~=5.0",
  "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.21",
  "pytest-jupyter[server]>=0.6",
  "anyio[asyncio]",
]

[project.scripts]
git-credential-jupyterlab-oauth = "jupyter_server_oauth_providers.credential_helper:main"

[project.entry-points."jupyter_server.extension"]
jupyter_server_oauth_providers = "jupyter_server_oauth_providers"

[project.urls]
Homepage = "https://github.com/stachuzamora/jupyterlab-git-oauth"
Repository = "https://github.com/stachuzamora/jupyterlab-git-oauth"
Issues = "https://github.com/stachuzamora/jupyterlab-git-oauth/issues"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab_git", "jupyter_server_oauth_providers"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_git/labextension/static/base_library.js" = "share/jupyter/labextensions/@jupyterlab/git/static/base_library.js"
"install.json"                            = "share/jupyter/labextensions/@jupyterlab/git/install.json"
"jupyter-config/jupyter_server_oauth_providers.json" = "etc/jupyter/jupyter_server_config.d/jupyter_server_oauth_providers.json"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.8.3"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "jupyterlab_git/labextension/static/style.js",
  "jupyterlab_git/labextension/package.json",
]
skip-if-exists = ["jupyterlab_git/labextension/static/style.js"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]
